force-app/main/default/objects/Student__c/fields/Admission_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Type__c</fullName>
    <label>Admission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convenor Quota</fullName>
            </value>
            <value>
                <fullName>Management Quota</fullName>
            </value>
            <value>
                <fullName>Spot Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>