force-app/main/default/objects/Student__c/fields/All_Bonafides__c.field-meta.xml
<CustomField>
    <fullName>All_Bonafides__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Bonafides</label>
    <type>Checkbox</type>
</CustomField>