force-app/main/default/objects/Student__c/fields/Alternate_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_No__c</fullName>
    <label>Alternate Mobile No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>