force-app/main/default/objects/Student__c/fields/B_Tech_Degree_Memo__c.field-meta.xml
<CustomField>
    <fullName>B_Tech_Degree_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B.Tech / Degree Memo</label>
    <type>Checkbox</type>
</CustomField>