force-app/main/default/objects/Student__c/fields/Books_Limit__c.field-meta.xml
<CustomField>
    <fullName>Books_Limit__c</fullName>
    <label>Books Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>