force-app/main/default/objects/Student__c/fields/Caste__c.field-meta.xml
<CustomField>
    <fullName>Caste__c</fullName>
    <label>Caste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OBC</fullName>
                <label>EBC</label>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>OC</fullName>
            </value>
            <value>
                <fullName>EWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>