force-app/main/default/objects/Student__c/fields/Caste_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Caste_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caste Certificate</label>
    <type>Checkbox</type>
</CustomField>