force-app/main/default/objects/Student__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course Code</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Students (Course Code)</relationshipLabel>
    <relationshipName>Students1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>