force-app/main/default/objects/Student__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Course__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economics/Pol.Science/History</fullName>
            </value>
            <value>
                <fullName>Botany/Zoology/Chemistry</fullName>
            </value>
            <value>
                <fullName>Maths/Physics/Computer Science</fullName>
            </value>
            <value>
                <fullName>Maths/Physics/Chemistry</fullName>
            </value>
            <value>
                <fullName>Computer Application</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>CBCS</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration</fullName>
            </value>
            <value>
                <fullName>Bachelor of Education</fullName>
            </value>
            <value>
                <fullName>Maths/Chemistry/Computer Science</fullName>
            </value>
            <value>
                <fullName>Botany/Zoology/Applied Nutrition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>