force-app/main/default/objects/Student__c/fields/Current_Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Academic_Year__c</fullName>
    <label>Current Academic Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Academic_Year</valueSetName>
    </valueSet>
</CustomField>