force-app/main/default/objects/Student__c/fields/Father_Phone__c.field-meta.xml
<CustomField>
    <fullName>Father_Phone__c</fullName>
    <label>Father / Guardian Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>