force-app/main/default/objects/Student__c/fields/Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fee_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fee Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>