force-app/main/default/objects/Student__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Year</fullName>
                <default>true</default>
                <label>Per Year</label>
            </value>
            <value>
                <fullName>Per Course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>