force-app/main/default/objects/Student__c/fields/Hall_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Hall_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICET Hall Ticket</label>
    <type>Checkbox</type>
</CustomField>