force-app/main/default/objects/Student__c/fields/Hall_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>Hall_Ticket_No__c</fullName>
    <label>Hall Ticket No</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>