force-app/main/default/objects/Student__c/fields/ICET_Hall_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>ICET_Hall_Ticket_No__c</fullName>
    <inlineHelpText>ENTER  ICET / B.Ed / B.Tech / PGCET / ECET Hall Ticket No</inlineHelpText>
    <label>Entrance Hall Ticket No</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>