force-app/main/default/objects/Student__c/fields/ICET_Rank__c.field-meta.xml
<CustomField>
    <fullName>ICET_Rank__c</fullName>
    <label>Entrance Test Rank</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>