force-app/main/default/objects/Student__c/fields/Identification_Mark_2__c.field-meta.xml
<CustomField>
    <fullName>Identification_Mark_2__c</fullName>
    <label>Identification Mark 2</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>