force-app/main/default/objects/Student__c/fields/Income_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Income_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income Certificate</label>
    <type>Checkbox</type>
</CustomField>