force-app/main/default/objects/Student__c/fields/Intermediate_Memo__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intermediate Memo</label>
    <type>Checkbox</type>
</CustomField>