force-app/main/default/objects/Student__c/fields/Is_RTF__c.field-meta.xml
<CustomField>
    <fullName>Is_RTF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is RTF</label>
    <type>Checkbox</type>
</CustomField>