force-app/main/default/objects/Student__c/fields/IsCommAddSameAsPermanentAddress__c.field-meta.xml
<CustomField>
    <fullName>IsCommAddSameAsPermanentAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCommAddSameAsPermanentAddress</label>
    <type>Checkbox</type>
</CustomField>