force-app/main/default/objects/Student__c/fields/IsFirstYear__c.field-meta.xml
<CustomField>
    <fullName>IsFirstYear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFirstYear</label>
    <type>Checkbox</type>
</CustomField>