force-app/main/default/objects/Student__c/fields/Name_of_The_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Name_of_The_Candidate__c</fullName>
    <label>Name of The Candidate</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>