force-app/main/default/objects/Student__c/fields/Name_of_The_Father__c.field-meta.xml
<CustomField>
    <fullName>Name_of_The_Father__c</fullName>
    <label>Father / Guardian Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>