force-app/main/default/objects/Student__c/fields/Name_of_The_Mother__c.field-meta.xml
<CustomField>
    <fullName>Name_of_The_Mother__c</fullName>
    <label>Name of The Mother</label>
    <length>50</length>
    <type>Text</type>
</CustomField>