force-app/main/default/objects/Student__c/fields/Parent_Income__c.field-meta.xml
<CustomField>
    <fullName>Parent_Income__c</fullName>
    <label>Parent Income</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>