force-app/main/default/objects/Student__c/fields/Parent_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Occupation__c</fullName>
    <label>Parent Occupation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>