force-app/main/default/objects/Student__c/fields/Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address__c</fullName>
    <label>Permanent Address</label>
    <type>Address</type>
</CustomField>