force-app/main/default/objects/Student__c/fields/Rank_Card__c.field-meta.xml
<CustomField>
    <fullName>Rank_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rank Card</label>
    <type>Checkbox</type>
</CustomField>