force-app/main/default/objects/Student__c/fields/Same_as_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Permanent_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as Permanent Address</label>
    <type>Checkbox</type>
</CustomField>