force-app/main/default/objects/Student__c/fields/Special_Category__c.field-meta.xml
<CustomField>
    <fullName>Special_Category__c</fullName>
    <label>Special Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCC</fullName>
            </value>
            <value>
                <fullName>NSS</fullName>
            </value>
            <value>
                <fullName>SPORT</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>PH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>