force-app/main/default/objects/Student__c/fields/SSC_Memo__c.field-meta.xml
<CustomField>
    <fullName>SSC_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSC Memo</label>
    <type>Checkbox</type>
</CustomField>