force-app/main/default/objects/Student__c/fields/SSC_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>SSC_Registration_No__c</fullName>
    <label>SSC Registration No</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>