force-app/main/default/objects/Student__c/fields/SSC_Year_of_Passing__c.field-meta.xml
<CustomField>
    <fullName>SSC_Year_of_Passing__c</fullName>
    <label>SSC Year of Passing</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>