force-app/main/default/objects/Student__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Studying</fullName>
                <default>true</default>
                <label>Studying</label>
            </value>
            <value>
                <fullName>Passed Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>