force-app/main/default/objects/Student__c/fields/Sub_Caste__c.field-meta.xml
<CustomField>
    <fullName>Sub_Caste__c</fullName>
    <label>Sub-Caste</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Caste__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BC-A</fullName>
            </value>
            <value>
                <fullName>BC-B</fullName>
            </value>
            <value>
                <fullName>BC-C</fullName>
            </value>
            <value>
                <fullName>BC-D</fullName>
            </value>
            <value>
                <fullName>BC-E</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>