force-app/main/default/objects/Student__c/fields/Total_Course_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Course_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Course Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>