force-app/main/default/objects/Student__c/fields/Tranfer_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Tranfer_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tranfer Certificate</label>
    <type>Checkbox</type>
</CustomField>