force-app/main/default/objects/Student__c/fields/University_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>University_Registration_Number__c</fullName>
    <label>University Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>