force-app/main/default/objects/Student__c/validationRules/Aadhar_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX(  Aadhar_Number__c , &quot;[0-9]{4} [0-9]{4} [0-9]{4}&quot;))</errorConditionFormula>
    <errorDisplayField>Aadhar_Number__c</errorDisplayField>
    <errorMessage>Please follow the format of  XXXX XXXX XXXX</errorMessage>
</ValidationRule>