force-app/main/default/objects/Student__c/validationRules/Father_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Father_Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Father_Phone__c ,&quot;[0-9]{10}&quot;))</errorConditionFormula>
    <errorDisplayField>Father_Phone__c</errorDisplayField>
    <errorMessage>Phone number should be maximum of 10 digits only</errorMessage>
</ValidationRule>