force-app/main/default/objects/Student__c/validationRules/Student_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Phone_Number__c ,&quot;[0-9]{10}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Phone number should be maximum of 10 digits only</errorMessage>
</ValidationRule>