force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name_of_The_Candidate__c</columns>
    <columns>Hall_Ticket_No__c</columns>
    <columns>Admission_Type__c</columns>
    <columns>SSC_Registration_No__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Course__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Course_Code__c</columns>
    <columns>Year__c</columns>
    <columns>Semester__c</columns>
    <columns>Status__c</columns>
    <columns>Current_Academic_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>